<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/screen_container_padding"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_container_padding">

        <LinearLayout
            android:id="@+id/ll_pv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pv_admission_date"
                style="@style/LabelStyleAddPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="2sp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/edittext_textsize_16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_pv_chevron"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_past_visit_chevron" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/screen_container_padding"
            android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/bed_number_title" />

            <TextView
                android:id="@+id/tv_pv_bed"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_active_labour" />

            <TextView
                android:id="@+id/tv_pv_active_labour"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_delivery" />

            <TextView
                android:id="@+id/tv_pv_delivery"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_risk_factors" />

            <TextView
                android:id="@+id/tv_pv_risk"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_parity" />

            <TextView
                android:id="@+id/tv_pv_parity"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_mode_of_delivery" />

            <TextView
                android:id="@+id/tv_pv_mode"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_baby_status" />

            <TextView
                android:id="@+id/tv_pv_baby"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_mother_status" />

            <TextView
                android:id="@+id/tv_pv_mother"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/item_past_visit_padding"
            android:weightSum="2">

            <TextView
                style="@style/LabelStyleSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="@dimen/std_8dp"
                android:text="@string/pv_final_outcome_report" />

            <TextView
                android:id="@+id/tv_pv_report"
                style="@style/LabelStyleSummaryValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:lineSpacingExtra="2sp"
                android:textAlignment="viewStart"
                android:textSize="@dimen/pv_value_text_size" />
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
